--- a/localisation/KR_Companies_l_english.yml
+++ b/localisation/KR_Companies_l_english.yml
@@ -760,7 +760,7 @@ werner_risch:0 "Werner Risch"
 
 ### Ukraine ###
 kommunara_nikolayev_shipyards:0 "Nikolayev Shipyards"
-german_ukranian_agricultural_comission:0 "German-Ukranian Agricultural Comission"
+german_ukranian_agricultural_comission:0 "German-Ukrainian Agricultural Comission"
 metallurgical_combine_azovstal:0 "Azovstal"
 ukr_akhz:0 "AKHZ"
 motor_sich:0 "Motor Sich"
