--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -86,7 +86,7 @@ FNG_SQI_UNION_JAP:0 "Fengtian and Shangqing United"
 FNG_MANTETSU_COLLAB:0 "Mantetsu Collaboration"
 FNG_SILVER_RESERVE_FULL:0 "Silver Reserve Full"
 
-### Foci ###
+### Focuses ###
 FNG_Preservation_of_the_Xinhai_Order:0 "Preservation of the Xinhai Order"
 FNG_Preservation_of_the_Xinhai_Order_desc:0 "Ironically, Fengtian is the sole national government upholding the order established by the Xinhai Revolution in 1911, which called for the overthrow of the Qing and the establishment of a Republic. Although its republican commitments are questionable, and Southern reclamation is currently unrealistic, the government has loudly advocated both goals, as they foster domestic legitimacy."
 FNG_Fuguo_Qiangbing:0 "Fuguo Qiangbing"
@@ -776,12 +776,12 @@ fengtian.new.83.d:0 "The necessary preparations have been made, and production w
 fengtian.new.83.a:0 "Good"
 
 fengtian.new.84.t:0 "Delays in Doihara's Plans"
-fengtian.new.84.d:0 "Communications from Doihara have been infrequent, scattered, and often evasive, until more recently when a he suggested a meeting in the old Astor House Hotel in Shanghai. Conveying his apologies for delays in his program over a very expensive meal in the elaborate dining room, Doihara seemed genuinely frustrated, but after returning, our agent has been careful to emphasize that progress is still on track and the money will be flowing soon. \n\n Other intelligence operatives in the Legation Cities, and other parts of China, tell a rather different story, and suggest that the operation is already profitable, with the vast majority of the money being used to fund Doihara's other subversive activities. The evidence seems to suggest that our representative in Shanghai has been bribed, but surely Doihara will eventually cough up what he's promised..."
+fengtian.new.84.d:0 "Communications from Doihara have been infrequent, scattered, and often evasive, until more recently when a he suggested a meeting in the old Astor House Hotel in Shanghai. Conveying his apologies for delays in his program over a very expensive meal in the elaborate dining room, Doihara seemed genuinely frustrated, but after returning, our agent has been careful to emphasise that progress is still on track and the money will be flowing soon. \n\n Other intelligence operatives in the Legation Cities, and other parts of China, tell a rather different story, and suggest that the operation is already profitable, with the vast majority of the money being used to fund Doihara's other subversive activities. The evidence seems to suggest that our representative in Shanghai has been bribed, but surely Doihara will eventually cough up what he's promised..."
 fengtian.new.84.a:0 "Unfortunate"
 fengtian.new.84.b:0 "We've had enough"
 
 fengtian.new.85.t:0 "Further Delays"
-fengtian.new.85.d:0 "Doihara has suggested another meeting, yet again after an extended period of limited communication, this time in a secluded hideaway near Xiamen in Fujian. Insisting that he has run into trouble with the Triads, Doihara once again apologizes for the delays, but insists that we will receive them within the next several months. \n\n Most of our operatives assigned to monitor Doihara's activities have mysteriously disappeared, so his actual status is difficult to ascertain."
+fengtian.new.85.d:0 "Doihara has suggested another meeting, yet again after an extended period of limited communication, this time in a secluded hideaway near Xiamen in Fujian. Insisting that he has run into trouble with the Triads, Doihara once again apologises for the delays, but insists that we will receive them within the next several months. \n\n Most of our operatives assigned to monitor Doihara's activities have mysteriously disappeared, so his actual status is difficult to ascertain."
 fengtian.new.85.a:0 "Unfortunate"
 fengtian.new.85.b:0 "We've had enough"
 
@@ -878,7 +878,6 @@ fengtian.new.107.a:0 "Great news!"
 fengtian.new.108.t:0 "An Unexpected Advantage"
 fengtian.new.108.d:0 "INSERT"
 fengtian.new.108.a:0 "Glorious!"
-
 
 ### Informal Empire Mechanic ###
 fengtian.informalempire.1.t:0 "Expel the Japanese Bandits!"
