--- a/localisation/KR_Germany_l_english.yml
+++ b/localisation/KR_Germany_l_english.yml
@@ -172,7 +172,7 @@ GER_linie1_desc:0 "The Syndicalist menace looms darker than ever. In fear of goi
 GER_linie2_full:0 "Over the Meuse and far away"
 GER_linie2_full_desc:0 "Our puppet regime in Brüssel is screaming for help against the Syndicalists. Extending the reactivation of the Ludendorfflinie over the Meuse river, up to the North Sea coast, would be costly and take lots of precious time - but it might enable us to make a stand somewhere that isn't Germany."
 GER_linie2_small:0 "Modernise only Bastenach"
-GER_linie2_small_desc:0 "Our resources are stretched thin and time is of the essence. Even though Flanders-Wallonia may lie somewhat underdefended, we can't afford to waste time defending something that will be lost sooner or later anyway."
+GER_linie2_small_desc:0 "Our resources are stretched thin and time is of the essence. Even though Flanders-Wallonia may lie somewhat under-defended, we can't afford to waste time defending something that will be lost sooner or later anyway."
 GER_linie3:0 "Fortify the Rhineland"
 GER_linie3_desc:0 "The Rhineland is the most heavily industrialised region in the entire world and vital to our economy, both in peace as in war. And yet, it lies only a few miles away from a border many have been eyeing nervously the last few weeks. In order to prepare against any eventualities, we should start extending the Ludendorflinie northwards."
 GER_schule:0 "Paderborner Luftkriegsschule"
@@ -616,7 +616,7 @@ gerdom.100.d:0 "In the darkest hour of the German Empire, Paul von Lettow-Vorbec
 gerdom.100.a:0 "We shall uphold our promises!"
 gerdom.100.b:0 "Africa shall remain German forevermore!"
 
-# Security
+### Security ###
 
 gerdom.105.t:0 "Germany Suppresses its French Population!"
 gerdom.105.d:0 "The German Empire, afraid of the rising power of our state decided to tighten control in border region, since they are fearful of our growing influence! We must be patient, soon the time will come, when our brothers in Wallonia, Lorraine and Alsace shall be liberated!"
@@ -628,7 +628,7 @@ gerdom.106.a:0 "Current security measures are sufficient!"
 gerdom.106.b:0 "It's the time to ban all French organisations in Germany!"
 gerdom.106.c:0 "This plan was madness from the beginning, abandon it..."
 
-# Rhenish Syndicalist volunteers
+### Rhenish Syndicalist Volunteers ###
 
 gerdom.200.t:0 "Bertolt Brecht asks for visa"
 gerdom.200.d:0 "For some time now, Syndicalists sympathisers from the Rhineland have been going abroad to help their 'comrades' in their various conflicts around the world. Today, the famous underground writer Bertolt Brecht has announced his intent to join these 'International Divisions'. \n\n We could let him go, which would most likely inspire quite another few Syndicalists to go abroad after him, or we could confiscate his passport and prohibit him from leaving the country. It would maybe weaken the Syndicalist cause, but also cause tremendous outrage..."
@@ -691,7 +691,7 @@ gerfor.2.a:0 "We will not risk war with Germany, pack up!"
 gerfor.2.b:0 "We Answer to no Monarchy! Continue onto their capital!"
 
 gerfor.3.t:0 "Asking the Germans for help"
-gerfor.3.d:0 "We are in a state of war with the Union of Britain. Our military, while proud, will not be able to withstand the Syndicalist onslaught. Some influential figures of daily life are petinioning us to ask the Germans for help, even if it might mean having to accept some German influence after the invasion is repelled. What shall we do?"
+gerfor.3.d:0 "We are in a state of war with the Union of Britain. Our military, while proud, will not be able to withstand the Syndicalist onslaught. Some influential figures of daily life are petitioning us to ask the Germans for help, even if it might mean having to accept some German influence after the invasion is repelled. What shall we do?"
 gerfor.3.a:0 "Send a telegram to Berlin!"
 gerfor.3.b:0 "The Germans can't be trusted!"
 
@@ -787,7 +787,7 @@ gerfor.28.a:0 "Create a new joint-stock company"
 gerfor.28.b:0 "Leave the industry alone"
 
 gerfor.29.t:0 "Logging in Madagascar has been expanded!"
-gerfor.29.d:0 "The Joint-Stock company that we established has began to show some results and our inventory of rare timber has steadily rised. However, with the mechanisation of logging, it has put several thousand people out of work. The Joint-Stock company has at the same time advised we begin construction on a timber processing plant to streamline production of timber products. If we were to fund this new project it would kill two birds with one stone, so to speak..."
+gerfor.29.d:0 "The Joint-Stock company that we established has began to show some results and our inventory of rare timber has steadily raised. However, with the mechanisation of logging, it has put several thousand people out of work. The Joint-Stock company has at the same time advised we begin construction on a timber processing plant to streamline production of timber products. If we were to fund this new project it would kill two birds with one stone, so to speak..."
 gerfor.29.a:0 "Create the new processing complex"
 gerfor.29.b:0 "We've invested enough as it is"
 
