--- a/localisation/KR_Pacific_States_of_America_l_english.yml
+++ b/localisation/KR_Pacific_States_of_America_l_english.yml
@@ -444,17 +444,13 @@ pacificstates.103.e:0 "Henry Arnold and the Ursine Party"
 
 pacificstates.20.t:0 "Royal visit to the Pacific States"
 pacificstates.20.d:0 "Arriving in San Francisco aboard the battlecruiser Restitution, King-Emperor Edward and his wife Isabelle of Orleans have conducted a successful tour of the Pacific States. Large crowds turned out to see the King and Queen Everywhere they went. The tour is a sign of the friendship between Canada and the Pacific States of America. "
-pacificstates.20.a:0 "Royal charm meets Hollywood glamor!"
+pacificstates.20.a:0 "Royal charm meets Hollywood glamour!"
 
 pacificstates.21.t:0 "Royal visit to the Pacific States"
 pacificstates.21.d:0 "Arriving in San Francisco aboard the battlecruiser Restitution, King-Emperor Edward and his wife Isabelle of Orleans have conducted a successful tour of the Pacific States. Large crowds turned out to see the King and Queen Everywhere they went. The tour is a sign of the friendship between Canada and the Pacific States of America. "
-pacificstates.21.a:0 "Royal charm meets Hollywood glamor!"
+pacificstates.21.a:0 "Royal charm meets Hollywood glamour!"
 
 pacificstates.22.t:0 "Referendum on Dividing California"
 pacificstates.22.d:0 "The people have called for a referendum regarding the state of California. By far the largest and most influential state in the PSA a number have begun a referendum on splitting into two states – a northern state called Jefferson and a southern state called Mojave. With that on the ballot the question is will the referendum pass or fail. "
-pacificstates.22.a:0 "The Referendum Suceeds - Split California into two states"
+pacificstates.22.a:0 "The Referendum Succeeds - Split California into two states"
 pacificstates.22.b:0 "The Referendum Fails - California is one state"
-
-
-
-
