--- a/localisation/KR_Poland_l_english.yml
+++ b/localisation/KR_Poland_l_english.yml
@@ -774,7 +774,7 @@ poland.91.t:0 "One of our Ministers has Died"
 poland.91.d:0 "Our nation mourns as one of our ministers passed away. Even now, our nation and the minister's office have to move onward. A new minister has to be put in office."
 poland.91.a:0 "Okay."
 poland.92.t:0 "The Return of Brest-Litovsk"
-poland.92.d:0 "Our recent political maneuvering has placed us well within Germany's good graces. Now that the Kaiser doesn't support Ukraine anymore than he does us, this is an excellent chance to regain Brest-Litovsk, a city populated mostly by Poles, but belonging to Ukraine."
+poland.92.d:0 "Our recent political manoeuvring has placed us well within Germany's good graces. Now that the Kaiser doesn't support Ukraine anymore than he does us, this is an excellent chance to regain Brest-Litovsk, a city populated mostly by Poles, but belonging to Ukraine."
 poland.92.a:0 "Press our claims!"
 poland.92.b:0 "It's bad idea..."
 poland.93.t:0 "Poland Demands Territory!"
@@ -782,15 +782,15 @@ poland.93.d:0 "The Polish government has demanded that we cede the city of Beres
 poland.93.a:0 "We cannot hope to win, submit to their demands."
 poland.93.b:0 "Demand German intervention."
 poland.94.t:0 "Polish Claims"
-poland.94.d:0 "The Polish government has demanded the city of Brest-Litovsk from the Kingdom of Ukraine. The Ukranian government has asked us to intervene on their behalf. This conflict can lead to a fragmentation of the alliance. How shall we react?"
+poland.94.d:0 "The Polish government has demanded the city of Brest-Litovsk from the Kingdom of Ukraine. The Ukrainian government has asked us to intervene on their behalf. This conflict can lead to a fragmentation of the alliance. How shall we react?"
 poland.94.a:0 "Support Poland."
 poland.94.b:0 "Support the Kingdom of Ukraine."
 poland.95.t:0 "No Support from Germany!"
 poland.95.d:0 "The Kaiser has decided that Poland is more important than us! What shall we do?"
 poland.95.a:0 "We cannot hope to win, submit to their demands."
 poland.95.b:0 "We are ready to defend!"
-poland.96.t:0 "Ukranian Secession"
-poland.96.d:0 "The Ukranian government has stated that they will not back down. The nationalist elements are much stronger than we have assumed."
+poland.96.t:0 "Ukrainian Secession"
+poland.96.d:0 "The Ukrainian government has stated that they will not back down. The nationalist elements are much stronger than we have assumed."
 poland.96.a:0 "Move in to maintain order."
 poland.96.b:0 "Back down."
 poland.97.t:0 "German Intervention"
@@ -809,7 +809,7 @@ poland.100.d:0 "The Polish government has demanded that we cede the city of Bere
 poland.100.a:0 "We cannot hope to win, submit to their demands."
 poland.100.b:0 "We are ready to defend!"
 poland.101.t:0 "Ukraine has Refused Us!"
-poland.101.d:0 "The Ukranian government has stated that they will not back down. What shall we do?"
+poland.101.d:0 "The Ukrainian government has stated that they will not back down. What shall we do?"
 poland.101.a:0 "We must intervene directly!"
 poland.101.b:0 "Cut diplomatic ties."
 poland.101.c:0 "Back down."
@@ -1018,7 +1018,8 @@ poland.159.a:0 "Glorious!"
 poland.160.t:0 "Georgia Remains Silent"
 poland.160.d:0 "to-do"
 poland.160.a:0 "We could have used their strength..."
-###
+
+
 
 poland.161.t:0 "Poland Joins the Internationale?"
 poland.161.d:0 "After their recent Syndicalist revolution, the small nation of Poland is seeking to join the ranks of Syndicalism worldwide, the Internationale. Should we allow them into our ranks?"
@@ -1061,7 +1062,8 @@ poland.171.a:0 "Glorious!"
 poland.172.t:0 "The Cossacks Ride On..."
 poland.172.d:0 "to-do"
 poland.172.a:0 "Truly a tragedy."
-###
+
+
 
 poland.173.t:0 "Poland Invites Us to the Internationale"
 poland.173.d:0 "Poland has moved on to joining the Internationale, leaving us in a precarious position on our own. Should we follow their lead and join the Internationale as well?"
@@ -1212,8 +1214,8 @@ pol_nationalists_overthrow_monarchy:0 "§RThe Nationalists seize control!§! \n"
 pol_syndicalists_overthrow_monarchy:0 "§RThe Syndicalists seize control!§! \n"
 POL_gminy_tooltip:0 "You will gain 5 Militia Divisions. \n"
 POL_polish_state:0 "You will abolish the monarchy and form the new Polish State."
-UKR_RUSCOUP:0 "Russain Coup in Ukraine"
-russ_gives_passports:0 "Russian-Ukranian Passports"
+UKR_RUSCOUP:0 "Russian Coup in Ukraine"
+russ_gives_passports:0 "Russian-Ukrainian Passports"
 POL_PRUSSIANPARTITION:0 "Laid Claim to the Prussian Partition"
 
 POL_totalist_party:0 "Free Worker's Party"
