More wonderful fixes

--- a/localisation/KR_Canada_l_english.yml
+++ b/localisation/KR_Canada_l_english.yml
@@ -12,7 +12,7 @@ CAN_howes_conversion:0 "Howe's Plan"
 CAN_howes_conversion_desc:0 "The issues of our military industry in the Weltkrieg has made it patently obvious that we must promote government intervention in the arms industry. As according to C.D Howe, we will subsidise most of these factories to ensure a full economic mobilisation on the eve of another conflict and maximised production even in peacetime."
 
 CAN_bill_c_7_debate:0 "The Bill C-7 Debate"
-CAN_bill_c_7_debate_desc:0 "Certainly more than the average parliamentary debate, the Bill C-7 Debate might very well change the path of Canada for the future to come. All of the political's sphere energy and influence is being spent in this single debate, preventing us from attending to other matters"
+CAN_bill_c_7_debate_desc:0 "Certainly more than the average parliamentary debate, the Bill C-7 Debate might very well change the path of Canada for the future to come. All of the energy and influence of the political sphere is being spent in this single debate, preventing us from attending to other matters"
 
 CAN_divided_nation:0 "Divided Government"
 CAN_divided_nation_desc:0 "Our government is deeply divided on many levels and there is constant bickering between the major parties. Even outside of that, there is also a clear split between English exiles, aiming to make Canada the springboard of their reconquest of the mainland, and Canadian nationals, tired of their antics and anti-parliamentarism. This is completely paralysing our current government."
@@ -487,7 +487,7 @@ CAN_pact_with_csa:0 "Pact with the Combined Syndicates"
 CAN_pact_with_csa_desc:0 "Having declared our support for our comrades in Chicago, it's time to put our thumbs on the scales of the civil war. A treaty of non-aggression, military access, and exclusive trading rights are probably a good place to start. Of course, this leaves us open to an invitation into the conflict if needed, an option we will measure carefully."
 
 CAN_intervene_acw:0 "American Civil War Intervention"
-CAN_intervene_acw_desc:0 "Our allies in the American Civil War are losing ground. If we do not act soon, we could be facing a unified and hostile American state on our border. Now is the time to intervene, let us immediately contact our American ally and announce our entry in the conflict, our troops shall be fully mobilized in one and a half month's time."
+CAN_intervene_acw_desc:0 "Our allies in the American Civil War are losing ground. If we do not act soon, we could be facing a unified and hostile American state on our border. Now is the time to intervene, let us immediately contact our American ally and announce our entry in the conflict, our troops shall be fully mobilised in one and a half month's time."
 
 CAN_unity_government:0 "Form a Unity Government"
 CAN_unity_government_desc:0 "Political division and bickering leave us vulnerable and paralysed in a worsening global environment. We should set aside our differences and come together with our opponents across the aisle to form a unified government, at least until the crisis passes."
