--- a/localisation/KR_Baltic_Duchy_l_english.yml
+++ b/localisation/KR_Baltic_Duchy_l_english.yml
@@ -47,7 +47,7 @@ balticduchy.7.c:0 "Conservative Party"
 balticduchy.8.t:0 "Left-Wing Radicals seize the power"
 balticduchy.8.d:0 "Radicals, sponsored by the commie bastards, have started an open rebellion against us. The Duke himself and most of his cabinet have been captured. Red flags are waving from top of the Ducal Reichstag. Now it's time to choose, who will lead the comrades of new Baltic Union?"
 balticduchy.8.a:0 "Baltic Socialist Party; the peaceful reformers!"
-balticduchy.8.b:0 "United Baltic Syndicates; the followers of the Orthodox Syndycalism!"
+balticduchy.8.b:0 "United Baltic Syndicates; the followers of the Orthodox Syndicalism!"
 balticduchy.8.c:0 "THe Baltic Totalist Party seize the power and declare a one-party state!"
 
 balticduchy.29.t:0 "Baltic Germans and their Duchy"
@@ -256,13 +256,13 @@ balticduchy.170.a:0 "Conservative Party"
 balticduchy.170.b:0 "Nationalist German Party"
 
 balticduchy.171.t:0 "Elections time - 1937!"
-balticduchy.171.d:0 "The new parliament elections are coming and only three parties were able to make it into parliament. The highly xenophobic 'Nationalist German Party,' the 'Liberal Party,' and the 'Conservative Party.' The social democrats and Baltic nationalists were too marginal to have a majority."
+balticduchy.171.d:0 "The new parliament elections are coming and only three parties were able to make it into parliament. The highly xenophobic Nationalist German Party, the Liberal Party, and the Conservative Party. The social democrats and Baltic nationalists were too marginal to have a majority."
 balticduchy.171.a:0 "Conservative Party"
 balticduchy.171.b:0 "Nationalist German Party"
 balticduchy.171.c:0 "Liberal Party"
 
 balticduchy.172.t:0 "Elections time - 1941!"
-balticduchy.172.d:0 "The new parliament elections are coming and only three parties were able to make it into parliament. The highly xenophobic 'Nationalist German Party,' the 'Liberal Party,' and the 'Conservative Party.' The social democrats and Baltic nationalists were too marginal to have a majority."
+balticduchy.172.d:0 "The new parliament elections are coming and only three parties were able to make it into parliament. The highly xenophobic Nationalist German Party, the Liberal Party, and the Conservative Party. The social democrats and Baltic nationalists were too marginal to have a majority."
 balticduchy.172.a:0 "Conservative Party"
 balticduchy.172.b:0 "Nationalist German Party"
 balticduchy.172.c:0 "Liberal Party"
@@ -423,7 +423,7 @@ BAT_ERP:0 "Economical Recovery Plan"
 BAT_ERP_desc:0 "The crisis known as the Black Monday has caused many troubles for our economy. More than fifty thousand people had lost their jobs at the end of first day. We have got to do something, and our ministers are already preparing a plan to save our economy."
 
 BAT_ERP_Gov1:0 "Government Intervention"
-BAT_ERP_Gov1_desc:0 "We cannot allow this stagnation to continue. The government should assume control of all the major facilities. It is a harsh policy that will surely stiffle our private sector, but it will steer our economy out of trouble."
+BAT_ERP_Gov1_desc:0 "We cannot allow this stagnation to continue. The government should assume control of all the major facilities. It is a harsh policy that will surely stifle our private sector, but it will steer our economy out of trouble."
 
 BAT_ERP_Gov2:0 "Build Up Our Roads"
 BAT_ERP_Gov2_desc:0 "Many unemployed citizens are trying to find any kind of job. We can help them by sending them on construction works. They will build up our roads and we will pay them. This way we can kill two birds with one stone."
@@ -474,13 +474,13 @@ BAT_Army_Inf2:0 "Improve our Training System"
 BAT_Army_Inf2_desc:0 "We should reorganise and modernise our training system. New drilling methods will shorten boot camp times and stronger emphasis on actual combat training will increase the combat readiness of our troops."
 
 BAT_Army_Doc1:0 "War Games"
-BAT_Army_Doc1_desc:0 "Our military staff still push for old tactics and doctrines. We desperately need to change their minds. If we start organizing regular war games, we will slowly but surely force them to adapt to the realities of modern warfare."
+BAT_Army_Doc1_desc:0 "Our military staff still push for old tactics and doctrines. We desperately need to change their minds. If we start organising regular war games, we will slowly but surely force them to adapt to the realities of modern warfare."
 
 BAT_Army_Doc2:0 "Modern Doctrine Effort"
 BAT_Army_Doc2_desc:0 "Now our generals are prepared for the realities of today's warfare. But even better, they now seem to have finally adopted a more innovative and forward-thinking mindset. Let us warmly welcome any suggestions from them, to seek new tactics to implement."
 
 BAT_Army_Mot:0 "Mobile Army"
-BAT_Army_Mot_desc:0 "We can significantly improve the speed of our troops by simply adopting motorized vehicles as an integral part of our division design. These new troops will be attached to their trucks as cavalry were with their horses, now we just need to figure out the tactical and organizational details."
+BAT_Army_Mot_desc:0 "We can significantly improve the speed of our troops by simply adopting motorised vehicles as an integral part of our division design. These new troops will be attached to their trucks as cavalry were with their horses, now we just need to figure out the tactical and organisational details."
 
 BAT_Army_Arm:0 "Armour Blueprints"
 BAT_Army_Arm_desc:0 "It seems that tanks become more and more powerful and practical every day, not that the Weltkrieg had not already showcased their potential by shattering the tactics of trench warfare. Every modern army will come to rely on them, and so should we. We will build our own."
@@ -507,7 +507,7 @@ BAT_RUS_INT1:0 "Russification"
 BAT_RUS_INT1_desc:0 "The vile Germans are no longer our masters. Russia has shown deep interest in the prosperity of our new state. We should strengthen our ties with them by promoting the Russian culture all across our lands."
 
 BAT_RUS_INT2:0 "Baltic German Question"
-BAT_RUS_INT2_desc:0 "Baltic Germans always were a minority in our states, propped up by aggresive Germanisation policies from Berlin. Now that the Kaiser's hold on our country has been shattered, what should we do with them?"
+BAT_RUS_INT2_desc:0 "Baltic Germans always were a minority in our states, propped up by aggressive Germanisation policies from Berlin. Now that the Kaiser's hold on our country has been shattered, what should we do with them?"
 
 BAT_RUS_INT3:0 "Introduce Russian Language"
 BAT_RUS_INT3_desc:0 "Our Russian masters have encouraged us to embrace the Russian language as our only official language. This will take time and cause some issues, as all our official texts are currently in German or Baltic languages, and a majority of our population is still German or Baltic."
@@ -528,7 +528,7 @@ BAT_Army_Mil_Navy_New:0 "New Naval Technologies"
 BAT_Army_Mil_Navy_New_desc:0 "Traditions are good, but we can't afford to forget about new technologies. Instead of praising the old ways, we should invest our funds into some brand new naval technologies like submarines."
 
 BAT_Army_Mil_Navy_Doc:0 "Our Brave Officers"
-BAT_Army_Mil_Navy_Doc_desc:0 "Our naval officers are some of the best officers of Europe. We should encourage them and create more favorable working conditions for them to encourage them to stay and improve our navy."
+BAT_Army_Mil_Navy_Doc_desc:0 "Our naval officers are some of the best officers of Europe. We should encourage them and create more favourable working conditions for them to encourage them to stay and improve our navy."
 
 BAT_Army_Mil_Navy_Transport:0 "Elite Baltic Marines"
 BAT_Army_Mil_Navy_Transport_desc:0 "With our long coastline, we will always be threatened by naval invasions. We should teach some of our troops to fight in such conditions and even perform autonomous naval landings."
@@ -563,7 +563,7 @@ BAT_start_crisis:0 "Conscription Crisis"
 BAT_start_crisis_desc:0 "Only people of German descent or having sufficiently Germanised are allowed into the armed forces. Naturally, as the majority of the people in our country are Native Balts and resistance to Germanisation is still high, this poses massive conscription issues. However, due to significant unrest and the ever present risk of a revolt, this is currently seen as a necessary evil."
 
 BAT_multi_ling_aut:0 "Minor Autonomy"
-BAT_multi_ling_aut_desc:0 "Following some diplomatic maneuvering, we have succesfully put an end to the Kaiser's plans of Germanisation. Our country is still shattered, but our people are grateful that we saved our minorities from cultural indoctrination. These wounds will take time to heal, but at least they will be able to heal."
+BAT_multi_ling_aut_desc:0 "Following some diplomatic manoeuvring, we have successfully put an end to the Kaiser's plans of Germanisation. Our country is still shattered, but our people are grateful that we saved our minorities from cultural indoctrination. These wounds will take time to heal, but at least they will be able to heal."
 
 BAT_german_majority:0 "German Majority"
 BAT_german_majority_desc:0 "Following a recent push for Germanisation, we have finally achieved a significant milestone. The majority of our country is now considered German, and as such our position in the country as the majority culture is secure. This not only allows us to finally end the recent instability, but also to enforce the will of the German people on those Native and Russian rebels."
@@ -575,7 +575,7 @@ BAT_factory:0 "Economical Boom"
 BAT_factory_desc:0 "The liberalisation of our economy has had the effect that we hoped, with construction and production once again roaring through our lands. This allows us to contract our newly-recovered economy to peform major infrastructure works, faster and cheaper."
 
 BAT_militia:0 "Baltic Militia"
-BAT_militia_desc:0 "With the mighty German army promising to defend our country against agression, the organization of our country's military from its very inception has been relaxed, to say the least. We need to remedy to this, wherever we are to still benefit of Germany's protection, or especially if we are to lose it."
+BAT_militia_desc:0 "With the mighty German army promising to defend our country against aggression, the organisation of our country's military from its very inception has been relaxed, to say the least. We need to remedy to this, wherever we are to still benefit of Germany's protection, or especially if we are to lose it."
 
 BAT_Black_Monday:0 "Aftermath of Black Monday"
 BAT_Black_Monday_desc:0 "As a country deeply within the Kaiserreich's sphere of influence, the impact of the Black Monday has been brutal to our economy. However, we cannot wait for Germany to fix her own economy, there is work to be done at home. The unrest cannot be ignored, and might be costly if left to boil."
@@ -593,7 +593,7 @@ BAT_pol:0 "Political Establishment"
 BAT_pol_desc:0 "There might be those who decry the new influence of some capitalists on our economy, but this direct connection of the political and economic worlds allow us to strengthen our decision-making and help influence our nation's economy, for the better."
 
 BAT_drill:0 "Modern Training System"
-BAT_drill_desc:0 "Training a soldier is more complex than teaching him how to shoot his rifle and throw his hand grenades. By perfecting our drill system, we make boot camp faster, more efficient at turning the average citizen into a competent soldier, and thus capable of more rapidly mobilizing new divisions, even those of a new concept to us."
+BAT_drill_desc:0 "Training a soldier is more complex than teaching him how to shoot his rifle and throw his hand grenades. By perfecting our drill system, we make boot camp faster, more efficient at turning the average citizen into a competent soldier, and thus capable of more rapidly mobilising new divisions, even those of a new concept to us."
 
 BAT_fort:0 "Ostwall Fortifications Network"
 BAT_fort_desc:0 "The Ostwall is more than a few isolated bunkers. A complex and carefully designed network of fortication works, integrating natural chokepoints and artificial constructions alike, it will prove a challenge to any invading forces. Likewise, it will also help us design future expansions, and even brand new fortification lines."
