--- a/localisation/KR_Countries_Cosmetic_l_english.yml
+++ b/localisation/KR_Countries_Cosmetic_l_english.yml
@@ -2204,6 +2204,37 @@ FNG_manchurian_empire_national_populist:0 "Empire of Manchuria"
 FNG_manchurian_empire_national_populist_ADJ:0 "Manchurian"
 FNG_manchurian_empire_national_populist_DEF:0 "The Empire of Manchuria"
 
+INS_HOL_totalist:0 "Dutch East Indies"
+INS_HOL_totalist_ADJ:0 "Indonesian"
+INS_HOL_totalist_DEF:0 "The Dutch East Indies"
+INS_HOL_syndicalist:0 "Dutch East Indies"
+INS_HOL_syndicalist_ADJ:0 "Indonesian"
+INS_HOL_syndicalist_DEF:0 "The Dutch East Indies"
+INS_HOL_radical_socialist:0 "Dutch East Indies"
+INS_HOL_radical_socialist_ADJ:0 "Indonesian"
+INS_HOL_radical_socialist_DEF:0 "The Dutch East Indies"
+INS_HOL_social_democrat:0 "Dutch East Indies"
+INS_HOL_social_democrat_ADJ:0 "Indonesian"
+INS_HOL_social_democrat_DEF:0 "The Dutch East Indies"
+INS_HOL_social_liberal:0 "Dutch East Indies"
+INS_HOL_social_liberal_ADJ:0 "Indonesian"
+INS_HOL_social_liberal_DEF:0 "The Dutch East Indies"
+INS_HOL_market_liberal:0 "Dutch East Indies"
+INS_HOL_market_liberal_ADJ:0 "Indonesian"
+INS_HOL_market_liberal_DEF:0 "The Dutch East Indies"
+INS_HOL_social_conservative:0 "Dutch East Indies"
+INS_HOL_social_conservative_ADJ:0 "Indonesian"
+INS_HOL_social_conservative_DEF:0 "The Dutch East Indies"
+INS_HOL_authoritarian_democrat:0 "Dutch East Indies"
+INS_HOL_authoritarian_democrat_ADJ:0 "Indonesian"
+INS_HOL_authoritarian_democrat_DEF:0 "The Dutch East Indies"
+INS_HOL_paternal_autocrat:0 "Dutch East Indies"
+INS_HOL_paternal_autocrat_ADJ:0 "Indonesian"
+INS_HOL_paternal_autocrat_DEF:0 "The Dutch East Indies"
+INS_HOL_national_populist:0 "Dutch East Indies"
+INS_HOL_national_populist_ADJ:0 "Indonesian"
+INS_HOL_national_populist_DEF:0 "The Dutch East Indies"
+
 ##############
 #Vanilla
 ##############
