--- a/localisation/KR_indonesia_l_english.yml
+++ b/localisation/KR_indonesia_l_english.yml
@@ -57,3 +57,6 @@ ins.7.a:0 "Such a miserable mistake"
 ins.8.t:0 "Our request was refused!"
 ins.8.d:0 "It seems the Germans do not want us in their alliance..."
 ins.8.a:0 "Such a miserable mistake"
+ins.9.t:0 "Indonesia Gains Independence"
+ins.9.d:0 "Following our formal indepedence from [HOL.GetNameDef], Nationalist leaders in our country rapidly put forwards a proposal to change our name and flag. Honouring the legacy of the Majapahit Empire and our Austronesion legacy, the colors of our national flag will be Red and White, the Red Mother Earth and White Father Sky.\n\nAs for the name of our country, it shall be as the English navigator George Windsor Earl once proposed, Indós Nèsos, the Indian Island.\n\nIndonesia."
+ins.9.a:0 "Dutch we are no more. Indonesia rises!"
